--- a/html/home.html
+++ b/html/home.html
@@ -1,35 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style-home.css">
-	<title>Nicolas Freitag</title>
+	<title>Willkommen - Nicolas Freitag</title>
+	<link rel="shortcut icon" type="image/png" href="../images/index/favicon.png">
+	<link rel="stylesheet" type="text/css" href="../css/style-home.css">
+	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 </head>
-<body>
-	<header>
-	<ul>
-		<li>
-			<a href="http://www.nicolasfreitag.de/"><b><h1 class="house">Nicolas Freitag</h1></b></a>
-		</li>
-		<li>
-			<a href="http://www.nicolasfreitag.de/"><b><p class="head1">Arbeiten</p></b></a>	
-		</li>
-		<li>
-			<a href="http://www.nicolasfreitag.de/"><b><p class="head1">Austellungen</p></b></a>	
-		</li>
-		<li>
-			<a href="http://www.nicolasfreitag.de/"><b><p class="head1">Kontakt</p></b></a>	
-		</li>
-		<li>
-			<a href="http://www.nicolasfreitag.de/"><b><p class="head1">News</p></b></a>	
-		</li>
-	</ul>
-	
-	</header>
-	<div>
-		<div>
-		<img src="http://www.nicolasfreitag.de/images/image-220.jpg">
+	<body>
+		<header>
+			<h1> <a href="home.html"> Nicolas Freitag </a></h1>
+		</header>
+		<div class="allnavbars">	
+			<ul id="globalnavbar" class="globalnavbar">
+				<li>
+					<a href="http://www.nicolasfreitag.de/"><b><p class="head1">Arbeiten</p></b></a>
+				</li>
+				<li>
+					<a href="http://www.nicolasfreitag.de/"><b><p class="head1">Austellungen</p></b></a>	
+				</li>
+				<li>
+					<a href="http://www.nicolasfreitag.de/"><b><p class="head1">Kontakt</p></b></a>	
+				</li>
+				<li>
+					<a href="neues.html"><b><p class="head1">Neues</p></b></a>	
+				</li>
+				<script src="../js/home-script.js"></script>
+			</ul>	
+			<!-- 
+			<ul class="mnavbar">
+				<li>
+					
+				</li>
+			</ul>
+			-->
 		</div>
-	</div>
-	<p></p>
-</body>
+
+		<div class="content">
+			<div>
+			<img src="http://www.nicolasfreitag.de/images/image-220.jpg">
+			</div>
+		
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+			<p>Text</p>
+		</div>
+	</body>	
 </html>
+
