--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Nicolas Freitag</title>
+	<link rel="shortcut icon" type="image/png" href="images/index/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style-index.css">
+	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 </head>
 <body>
 	<div class="wrapper">
